tests/outref/TBP006.ref

-- TBP006 : OCTO935 : Test no SIG-11 and/or incorrect ERR_UNKNOWN_TABLE_OR_VIEW error on an invalid SQL command

-- Queries that start with an invalid table name ("tablename" below) used to previously issue a ERR_UNKNOWN_TABLE_OR_VIEW error
-- They are now expected to issue a "syntax error" highlighting the first token (i.e. invalid command).
tablename;
tablename aliasname;

-- Queries that start with a valid table name ("names" below) used to previously issue an "unexpected SEMICOLON" error.
-- They are now expected to issue a "syntax error" highlighting the first token (i.e. invalid command).
names;
names aliasname;


-- The below queries used to previously SIG-11.
-- They are now expected to issue a "syntax error" highlighting the first token (i.e. invalid command).
IDENTIFIER_ALONE;
IDENTIFIER_BACK_TICK;
IDENTIFIER_PERIOD_IDENTIFIER;

[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected IDENTIFIER_ALONE
LINE 3:1: tablename;
          ^^^^^^^^^
OCTO> tablename;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected IDENTIFIER_ALONE
LINE 4:1: tablename aliasname;
          ^^^^^^^^^
OCTO> tablename aliasname;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected IDENTIFIER_ALONE
LINE 6:1: names;
          ^^^^^
OCTO> names;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected IDENTIFIER_ALONE
LINE 7:1: names aliasname;
          ^^^^^
OCTO> names aliasname;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected IDENTIFIER_ALONE
LINE 10:1: IDENTIFIER_ALONE;
           ^^^^^^^^^^^^^^^^
OCTO> IDENTIFIER_ALONE;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected IDENTIFIER_ALONE
LINE 11:1: IDENTIFIER_BACK_TICK;
           ^^^^^^^^^^^^^^^^^^^^
OCTO> IDENTIFIER_BACK_TICK;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected IDENTIFIER_ALONE
LINE 12:1: IDENTIFIER_PERIOD_IDENTIFIER;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
OCTO> IDENTIFIER_PERIOD_IDENTIFIER;
OCTO> 
